feat user_service: registered end points for profile pictures updates
